Prevent a cramped-up revision history sidebar

--- a/css/style.css
+++ b/css/style.css
@@ -182,16 +182,22 @@
 
 #revViewerContainer{
 	position: absolute;
-	width: 85%;
+	width: 100%;
 	z-index: 600;
 	background-color: #ddd !important;
 	top: 45px;
 	bottom: 0;
 }
 
+#revViewer{
+    position: relative;
+    margin-right: 250px;
+    height: 100%;
+}
+
 #revPanelContainer{
-	position: absolute;
-	width: 15%;
+	position: fixed;
+	width: 250px;
 	z-index: 600;
 	background-color: #efefef !important;
 	right: 0;
